chore: 19092: improve data file collection - general
Fixes: https://github.com/hiero-ledger/hiero-consensus-node/issues/19092
Reviewed-by: Anthony Petrov <anthony@swirldslabs.com>, Artem Ananev <artem.ananev@swirldslabs.com>
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>